# cnc-project

./: README.md  fix_mesh.py  pyproject.toml
cnc-enclosure/: cnc-enclosure.scad
control-boards-enclosure/: cnc-enclosure.py  cnc-enclosure.scad  cnc-enclosure.stl  cnc-enclosure_1h58m_0.32mm_240C_PETG_ENDER3PRO.gcode
